# langchain-mongodb-agent-log

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/explanation/: architecture.md  langsmith-comparison.md  why-not-checkpointer.md  why-this-exists.md
docs/how-to/: attribute-subagents.md  bare-stategraph.md  configure-ttl.md  create-agent.md  deepagents.md  migrate-from-create-react-agent.md  multi-agent-supervisor.md  observability.md  per-user-scoping-with-contextvar.md  provide-custom-embeddings.md
docs/reference/: api.md  configuration.md  document-shape.md  indexes.md
docs/tutorial/: first-log.md  hybrid-search.md
specs/v0.1/: design.md  requirements.md  tasks.md
specs/v0.2/: design-delta.md  requirements.md  tasks.md
specs/v0.3/: design-delta.md  requirements.md  tasks.md
src/langchain_mongodb_agent_log/: __init__.py  _logging.py  _version.py
src/langchain_mongodb_agent_log/adapters/: _correlation.py  callback.py  middleware.py  node.py
src/langchain_mongodb_agent_log/core/: context.py  engine.py  indexes.py  projection.py  worker.py
src/langchain_mongodb_agent_log/embeddings/: factory.py
src/langchain_mongodb_agent_log/retrieval/: retriever.py  tool.py
tests/: conftest.py
tests/integration/: conftest.py  test_async_invocation.py  test_graph_shapes.py  test_v03_live.py
tests/unit/: test_bootstrap.py  test_callback.py  test_context.py  test_correlation.py  test_durable_step.py  test_engine.py  test_indexes.py  test_lifecycle.py  test_middleware.py  test_node.py  test_projection.py  test_read_api.py  test_rerank.py  test_retriever.py  test_set_ttl.py  test_stats.py  test_tool.py  test_ts_injection.py  test_voyage_factory.py  test_worker.py
